@@ -1,5 +1,6 @@
 Changes for 1.4.5:
 
+ - [ZBX-288] fixed compilation of the agent under Solaris 2.6 (Alexei)
  - [ZBX-287] fixed compilation under FreeBSD 4.1 with older GCC (Alexei)
  - [ZBX-283] fixed SQL statement where INTEGER exceeds allowed range (Artem)
  - [ZBX-277] fixed possible server crash when evaluating functions str(), regexp() and iregexp() (Alexei)
